@@ -8,6 +8,8 @@ Changes in version 1.3.3:
 
 * Reading domain process data via sysfs.
 * Added e1000 driver for kernel 2.6.22.
+* Reduced watchdog function executions in e1000 drivers.
+* Fixed sync manager configuration problem for some slaves.
 
 -------------------------------------------------------------------------------
 
